--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,8 @@ dependencies {
     // guava cache
     implementation group: 'com.google.guava', name: 'guava', version: '31.0.1-jre'
 
+    testImplementation 'junit:junit:4.12'
+
 }
 
 test {
